[package]
name = "axio"
version = "0.1.1"
edition = "2021"
authors = ["Yuekai Jia <equation618@gmail.com>"]
description = "`std::io`-like I/O traits for `no_std` environment"
license = "GPL-3.0-or-later OR Apache-2.0 OR MulanPSL-2.0"
homepage = "https://github.com/arceos-org/arceos"
repository = "https://github.com/arceos-org/axio"
documentation = "https://docs.rs/axio"
keywords = ["arceos", "io", "no-std"]
categories = ["no-std"]

[features]
alloc = []
default = ["alloc"]

[dependencies]
axerrno = "0.1"
bitflags = { version = "2.9.1", default-features = false }

[patch.crates-io]
axerrno = { git = "https://github.com/Starry-OS/axerrno.git", rev = "58be232" }
